# SmartHub

./: BaseSQL.cpp  BaseSQL.h  CMakeLists.txt  TgSQL.cpp  tests.cpp
headers/: events.h
headers/SQL/: BaseSQL.h  TgSQL.h
src/: events.cpp  main.cpp
src/SQL/: BaseSQL.cpp  TgSQL.cpp
src/TgBot/: TgBot.cpp
